media/nzbget-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nzbget
    app.kubernetes.io/component: nzbget
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/part-of: nzbget
  name: nzbget
  namespace: media
spec:
  host: nzbget-media.apps.homelab.csfreak.com
  port:
    targetPort: 6789-tcp
  to:
    kind: Service
    name: nzbget
    weight: 100
  wildcardPolicy: None
